--- a/project-app/package.json
+++ b/project-app/package.json
@@ -13,11 +13,12 @@
     "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
+    "@angular/core": "^14.0.1",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngrx/effects": "^14.1.0",
     "@ngrx/store": "^11.1.1",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.5.0",
